--- a/letterAnim.css
+++ b/letterAnim.css
@@ -1,105 +1,107 @@
-.hoverthing {
+letterContainer {
     /*stay constant*/
+    --firstSpeed:350ms;
+    --letterDelay:40ms;
+    --secondSpeed:300ms;
+
     font-size:3em;
-    --firstSpeed:350ms; --letterDelay:40ms; --secondSpeed:300ms;
-    left:0; top:0; margin:0;overflow:hidden; height:3.5em;/*positioning and rendering*/
+    left:0; top:0; margin:0;overflow:hidden; height:3.5em; display:block;/*positioning and rendering*/
     /*disable selecting with cases for IE and Safari*/
     user-select: none; -ms-user-select: none; -webkit-user-select: none;
 
-    /*change on hover*/
-    width: 5.25em;
-    
+    width: 3em;/*change on hover*/
 }
-.hoverthing:hover {
+letterContainer:hover {
     transition:all var(--firstSpeed) ease-in-out;
+    width: 5.55em;
 }
 
-.hoverthing > .letter-initial:nth-child(1) {
+letterContainer > .letter-initial:nth-child(1) {
     transform:translate(0.15em,1em);
 }
-.hoverthing > .letter-initial:nth-child(2) {
+letterContainer > .letter-initial:nth-child(2) {
     transform:translate(0.75em,-0.5em);
 }
-.hoverthing > .letter-initial:nth-child(3) {
+letterContainer > .letter-initial:nth-child(3) {
     transform:translate(1.35em,-2em);
 }
 
 
-@keyframes firstInitial{
+@keyframes firstInitial {
     from {transform:translate(0.15em,1em);}
     to   {transform:translate(0.15em,0em);}
 }
-@keyframes secondInitial{
+@keyframes secondInitial {
     from {transform:translate(0.75em,-0.5em);}
     to   {transform:translate(0.15em,-0.5em);}
 }
-@keyframes thirdInitial{
+@keyframes thirdInitial {
     from {transform:translate(1.35em,-2em);}
     to   {transform:translate(0.15em,-1em);}
 }
-.hoverthing:hover > .letter-initial {
+letterContainer:hover > .letter-initial {
     animation-duration: var(--firstSpeed);
     animation-fill-mode: forwards;
 }
-.hoverthing:hover > .letter-initial:nth-child(1) {
+letterContainer:hover > .letter-initial:nth-child(1) {
     animation-name: firstInitial;
 }
-.hoverthing:hover > .letter-initial:nth-child(2) {
+letterContainer:hover > .letter-initial:nth-child(2) {
     animation-name: secondInitial;
 }
-.hoverthing:hover > .letter-initial:nth-child(3) {
+letterContainer:hover > .letter-initial:nth-child(3) {
     animation-name: thirdInitial;
 }
 
 
 
-@keyframes toN{
+@keyframes toN {
     from {transform:translateX(-3em);}
     to   {transform:translateX(var(--N));}
 }
-.hoverthing > .letter-initial > .letter-side {
+letterContainer > .letter-initial > .letter-side {
     display:inline;
     position:fixed;
     transform:translate(-3em)
 }
-.hoverthing:hover > .letter-initial > .letter-side {
+letterContainer:hover > .letter-initial > .letter-side {
     animation-name:toN;
     animation-duration:var(--secondSpeed);
     animation-fill-mode: forwards;
 }
 
 
-.hoverthing:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(1) {
+letterContainer:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(1) {
     /*A*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 1)); --N:0em;    }
-.hoverthing:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(2) {
+letterContainer:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(2) {
     /*M*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 2)); --N:0.6em;  }
-.hoverthing:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(3) {
+letterContainer:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(3) {
     /*P*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 3)); --N:1.5em;  }
-.hoverthing:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(4) {
+letterContainer:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(4) {
     /*B*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 4)); --N:2.1em;  }
-.hoverthing:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(5) {
+letterContainer:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(5) {
     /*E*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 5)); --N:2.7em;  }
-.hoverthing:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(6) {
+letterContainer:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(6) {
     /*L*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 6)); --N:3.2em;  }
-.hoverthing:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(7) {
+letterContainer:hover > .letter-initial:nth-child(1) > .letter-side:nth-child(7) {
     /*L*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 7)); --N:3.7em;  }
 
 
-.hoverthing:hover > .letter-initial:nth-child(2) > .letter-side:nth-child(1) {
+letterContainer:hover > .letter-initial:nth-child(2) > .letter-side:nth-child(1) {
     /*A*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 1)); --N:0em;    }
-.hoverthing:hover > .letter-initial:nth-child(2) > .letter-side:nth-child(2) {
+letterContainer:hover > .letter-initial:nth-child(2) > .letter-side:nth-child(2) {
     /*Y*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 2)); --N:0.6em;  }
 
 
-.hoverthing:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(1) {
+letterContainer:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(1) {
     /*I*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 1)); --N:0em;    }
-.hoverthing:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(2) {
+letterContainer:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(2) {
     /*M*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 2)); --N:0.3em;  }
-.hoverthing:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(3) {
+letterContainer:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(3) {
     /*P*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 3)); --N:1.2em;  }
-.hoverthing:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(4) {
+letterContainer:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(4) {
     /*S*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 4)); --N:1.75em; }
-.hoverthing:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(5) {
+letterContainer:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(5) {
     /*O*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 5)); --N:2.3em;  }
-.hoverthing:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(6) {
+letterContainer:hover > .letter-initial:nth-child(3) > .letter-side:nth-child(6) {
     /*N*/animation-delay:calc(var(--firstSpeed) + calc(var(--letterDelay) * 6)); --N:3em;    }
